# TelegramParser

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: code_check.yml  ruff.yml
telegram_parser/: __main__.py  config_reader.py  telegram_parse.py
